--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -20,3 +20,24 @@
     padding: 20px 30px;
     border-radius: 10px;
 }
+
+#app > .page > div > h4 {
+    margin-bottom: 15px;
+}
+
+.form-button-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.margin-right-5 {
+    margin-right: 5px;
+}
+
+.margin-top-bottom-30 {
+    margin: 30px 0;
+}
+
+.margin-bottom-15 {
+    margin-bottom: 15px;
+}
