[REFACTOR] Refatoração de alguns itens

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -6,11 +6,12 @@
 }
 
 #app > header {
-    background-color: #24292e;
+    background-color: #eb2324;
     color: #FFF;
     padding: 15px;
     text-transform: uppercase;
     text-align: center;
+    font-weight: bold;
 }
 
 #app > .page {
