--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -14,6 +14,14 @@
     font-weight: bold;
 }
 
+#app > header > a {
+    color: #FFF;
+}
+
+#app > header > a:hover {
+    text-decoration: none;
+}
+
 #app > .page {
     max-width: 1024px;
     margin: 15px auto;
